--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ p {
     text-align: justify;
 }
 
+/* realiacje - home page */
+
 .hovereffect {
     width: 100%;
     height: 100%;
@@ -105,4 +107,256 @@ p {
     filter: alpha(opacity=100);
     -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
+  }
+
+
+/* realiacje - porfolio page */
+s
+  .filtering {
+      /* margin-bottom: 40px; */
+  }
+  .filtering span {
+      border-bottom: 2px solid transparent;
+      cursor: pointer;
+      /* font-size: 15px;
+      font-weight: 600;
+      letter-spacing: 1px; */
+      /* margin-right: 20px; */
+      display: inline-block;
+      /* margin-bottom: 5px; */
+  }
+  .filtering span:last-child {
+      margin: 0;
+  }
+  .filtering .active {
+      border-color: white;
+      color: white;
+  }
+  .portfolio-wrapper {
+      position: relative;
+      overflow: hidden;
+  }
+  .portfolio-overlay {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      transition: all 500ms ease;
+  }
+  .portfolio-wrapper .portfolio-image img {
+      transform: scale(1.2);
+      will-change: transform;
+      transition: all 0.5s ease;
+      width: 100%;
+  }
+  .portfolio-wrapper:hover .portfolio-image img {
+      transform: none;
+  }
+  .portfolio-overlay:before {
+      position: absolute;
+      display: inline-block;
+      top: 15px;
+      right: 15px;
+      bottom: 15px;
+      left: 15px;
+      border: 1px solid rgba(0, 0, 0, 0.36);
+      content: "";
+      opacity: 0;
+      transition: all 0.5s ease;
+      transform: scale(0.85);
+  }
+  .portfolio-overlay .portfolio-content {
+      position: absolute;
+      bottom: 50%;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      opacity: 0;
+      padding: 0 35px;
+  }
+  .portfolio-content h4 {
+      color: #000;
+      font-weight: 600;
+      font-size: 20px;
+      text-transform: capitalize;
+      letter-spacing: 1px;
+      margin-bottom: 15px;
+  }
+  .portfolio-content p {
+      color: #000;
+      font-weight: 500;
+      letter-spacing: 1px;
+      margin-bottom: 0;
+  }
+  .portfolio-content > a {
+      line-height: 42px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      color: #000;
+      display: inline-block;
+      text-align: center;
+      margin-bottom: 15px;
+      font-weight: 800;
+  }
+  .portfolio-wrapper:hover .portfolio-overlay {
+      background-color: rgba(211, 211, 211, 0.85);
+  }
+  .portfolio-wrapper:hover .portfolio-overlay:before {
+      opacity: 1;
+      visibility: visible;
+      transform: none;
+  }
+  .portfolio-wrapper:hover .portfolio-overlay .portfolio-content {
+      transform: translateY(50%);
+      transition: transform 0.5s ease;
+      opacity: 1;
+  }
+  @media screen and (max-width: 1199px) {
+      .portfolio-content h4 {
+          font-size: 18px;
+      }
+  }
+  @media screen and (max-width: 991px) {
+      .portfolio-content h4 {
+          margin-bottom: 10px;
+      }
+      .portfolio-content p {
+          font-size: 15px;
+      }
+      .portfolio-content > a {
+          margin-bottom: 10px;
+      }
+  }
+  @media screen and (max-width: 767px) {
+      .portfolio-content h4 {
+          font-size: 17px;
+      }
+      .portfolio-content p {
+          font-size: 14px;
+      }
+  }
+  @media screen and (max-width: 575px) {
+      .portfolio-content h4 {
+          font-size: 16px;
+      }
+  }
+  .grid .grid-item {
+      position: relative;
+      overflow: hidden;
+  }
+  .grid .grid-item .portfolio-wrapper {
+      position: relative;
+      overflow: hidden;
+  }
+  .grid .grid-item .portfolio-overlay {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      transition: all 500ms ease;
+  }
+  .grid .grid-item .portfolio-wrapper .portfolio-image img {
+      transform: none;
+      will-change: transform;
+      transition: none;
+      width: 100%;
+  }
+  .grid .grid-item .portfolio-wrapper:hover .portfolio-image img {
+      transform: none;
+  }
+  .grid .grid-item .portfolio-overlay:before {
+      position: absolute;
+      display: inline-block;
+      top: 15px;
+      right: 15px;
+      bottom: 15px;
+      left: 15px;
+      border: 1px solid rgba(0, 0, 0, 0.36);
+      content: "";
+      opacity: 0;
+      transition: all 0.5s ease;
+      transform: scale(0.85);
+  }
+  .grid .grid-item .portfolio-overlay .portfolio-content {
+      position: absolute;
+      bottom: 50%;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      opacity: 0;
+  }
+  .grid .grid-item .portfolio-content h4 {
+      color: #000;
+      font-weight: 600;
+      letter-spacing: 1px;
+      font-size: 20px;
+      margin-bottom: 10px;
+  }
+  .grid .grid-item .portfolio-content p {
+      color: #000;
+      font-weight: 500;
+      letter-spacing: 1px;
+      margin-bottom: 0;
+  }
+  .grid .grid-item .portfolio-content a {
+      line-height: 36px;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      color: #000;
+      display: inline-block;
+      text-align: center;
+      margin-bottom: 10px;
+      font-weight: 800;
+  }
+  .grid .grid-item .portfolio-wrapper:hover .portfolio-overlay {
+      background-color: rgba(204, 222, 2, 0.85);
+  }
+  .grid .grid-item .portfolio-wrapper:hover .portfolio-overlay:before {
+      opacity: 1;
+      visibility: visible;
+      transform: none;
+  }
+  .grid .grid-item .portfolio-wrapper:hover .portfolio-overlay .portfolio-content {
+      transform: translateY(50%);
+      transition: transform 0.5s ease;
+      opacity: 1;
+  }
+  @media screen and (max-width: 1199px) {
+      .grid .grid-item .portfolio-content h4 {
+          font-size: 18px;
+      }
+  }
+  @media screen and (max-width: 991px) {
+      .grid .grid-item .portfolio-content h4 {
+          margin-bottom: 10px;
+      }
+      .grid .grid-item .portfolio-content p {
+          font-size: 15px;
+      }
+      .grid .grid-item .portfolio-content a {
+          margin-bottom: 10px;
+      }
+  }
+  @media screen and (max-width: 767px) {
+      .grid .grid-item .portfolio-content h4 {
+          font-size: 17px;
+      }
+      .grid .grid-item .portfolio-content p {
+          font-size: 14px;
+      }
+  }
+  @media screen and (max-width: 575px) {
+      .grid .grid-item .portfolio-content h4 {
+          font-size: 16px;
+      }
+      .grid .grid-item .portfolio-overlay:before {
+          top: 10px;
+          right: 10px;
+          bottom: 10px;
+          left: 10px;
+      }
   }
