--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
 
 body {
     margin: 0;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+h3 {
+    letter-spacing: 0.2em;
 }
 
 p {
@@ -83,8 +88,9 @@ p {
     transform: translate3d(0,0,0);
   }
   
-  .hovereffect a, .hovereffect p {
+  .hovereffect p {
     color: #FFF;
+    letter-spacing: 0.1em;
     opacity: 0;
     filter: alpha(opacity=0);
     -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -93,7 +99,7 @@ p {
     transform: translate3d(100%,0,0);
   }
 
-  .hovereffect a.info {
+  .hovereffect p.info {
     display: inline-block;
     text-decoration: none;
     padding: 7px 14px;
@@ -102,7 +108,7 @@ p {
     background-color: transparent;
   }
   
-  .hovereffect:hover a, .hovereffect:hover p {
+  .hovereffect:hover p {
     opacity: 1;
     filter: alpha(opacity=100);
     -webkit-transform: translate3d(0,0,0);
@@ -111,7 +117,7 @@ p {
 
 
 /* realiacje - porfolio page */
-s
+
   .filtering {
       /* margin-bottom: 40px; */
   }
@@ -160,7 +166,7 @@ s
       right: 15px;
       bottom: 15px;
       left: 15px;
-      border: 1px solid rgba(0, 0, 0, 0.36);
+      border: 1px solid rgba(255, 255, 255, 1);
       content: "";
       opacity: 0;
       transition: all 0.5s ease;
@@ -176,15 +182,15 @@ s
       padding: 0 35px;
   }
   .portfolio-content h4 {
-      color: #000;
-      font-weight: 600;
+      color: #FFF;
       font-size: 20px;
-      text-transform: capitalize;
+      text-transform: uppercase;
       letter-spacing: 1px;
       margin-bottom: 15px;
+      font-weight: normal;
   }
   .portfolio-content p {
-      color: #000;
+      color: #FFF;
       font-weight: 500;
       letter-spacing: 1px;
       margin-bottom: 0;
@@ -194,14 +200,14 @@ s
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      color: #000;
+      color: #FFF;
       display: inline-block;
       text-align: center;
       margin-bottom: 15px;
       font-weight: 800;
   }
   .portfolio-wrapper:hover .portfolio-overlay {
-      background-color: rgba(211, 211, 211, 0.85);
+      background-color: rgba(0, 0, 0, 0.6);
   }
   .portfolio-wrapper:hover .portfolio-overlay:before {
       opacity: 1;
@@ -241,7 +247,9 @@ s
       .portfolio-content h4 {
           font-size: 16px;
       }
-  }
+
+
+  /* }
   .grid .grid-item {
       position: relative;
       overflow: hidden;
@@ -274,7 +282,7 @@ s
       right: 15px;
       bottom: 15px;
       left: 15px;
-      border: 1px solid rgba(0, 0, 0, 0.36);
+      border: 1px solid rgba(255, 255, 255, 1);
       content: "";
       opacity: 0;
       transition: all 0.5s ease;
@@ -359,4 +367,4 @@ s
           bottom: 10px;
           left: 10px;
       }
-  }
+  } */
